--- a/Paastopaivakirja/pom.xml
+++ b/Paastopaivakirja/pom.xml
@@ -79,6 +79,28 @@
             <artifactId>spring-boot-starter-security</artifactId>
         </dependency>
         
+        <dependency>
+            <groupId>javax.persistence</groupId>
+            <artifactId>javax.persistence-api</artifactId>
+            <version>2.2</version>
+        </dependency>
+        
+        <dependency>
+            <groupId>org.hibernate</groupId>
+            <artifactId>hibernate-core</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.hibernate</groupId>
+            <artifactId>hibernate-entitymanager</artifactId>
+            <version>4.3.5.Final</version>
+        </dependency>
+        
+        <dependency>
+            <groupId>net.rgielen</groupId>
+            <artifactId>javafx-weaver-spring-boot-starter</artifactId>
+            <version>1.3.0</version>
+        </dependency>
+        
     </dependencies>
 
     <build>
@@ -111,7 +133,7 @@
                     </execution>
                 </executions>
             </plugin> 
-             
+            
         </plugins>       
     </build>
 
