--- a/Paastopaivakirja/src/main/resources/application.properties
+++ b/Paastopaivakirja/src/main/resources/application.properties
@@ -1,1 +1,10 @@
 spring.main.web.application-type=none
+
+spring.datasource.url=jdbc:h2:file:./database;create=true
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.H2Dialect
+
+spring.jpa.show-sql=true
+
+spring.resources.static-locations=file:src/main/resources/public/
+spring.resources.cache.period=0
