--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,6 @@
 /laskarit/viikko2/Unicafe/target
 
+/Paastopaivakirja/database.mv.db
 /Paastopaivakirja/.mvn
 /Paastopaivakirja/mvnw
 /Paastopaivakirja/mvnw.cmd
