--- a/Paastopaivakirja/pom.xml
+++ b/Paastopaivakirja/pom.xml
@@ -118,6 +118,9 @@
             <plugin>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
+                <configuration>
+                    <mainClass>com.example.PaastoPaivakirja.PaastoPaivakirjaApplication</mainClass>
+                </configuration>
             </plugin>
             
             <plugin>
