--- a/Paastopaivakirja/pom.xml
+++ b/Paastopaivakirja/pom.xml
@@ -120,7 +120,7 @@
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
                 <configuration>
-                    <mainClass>com.example.PaastoPaivakirja.PaastoPaivakirjaApplication</mainClass>
+                    <mainClass>com.example.paastopaivakirja.PaastoPaivakirjaApplication</mainClass>
                 </configuration>
             </plugin>
             
@@ -137,6 +137,20 @@
                     </execution>
                 </executions>
             </plugin> 
+            
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-checkstyle-plugin</artifactId>
+                <version>2.17</version>
+                <configuration>
+                    <configLocation>checkstyle.xml</configLocation>
+                </configuration>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-jxr-plugin</artifactId>
+                <version>2.5</version>
+            </plugin>
             
         </plugins>       
     </build>
