--- a/Paastopaivakirja/src/main/resources/application.properties
+++ b/Paastopaivakirja/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.main.web.application-type=none
 
-spring.datasource.url=jdbc:h2:file:./database;create=true
+spring.datasource.url=jdbc:h2:file:./paastopaivakirja;create=true
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.H2Dialect
 
