--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,8 @@
 
 /Paastopaivakirja/database.mv.db
 /Paastopaivakirja/database.trace.db
+/Paastopaivakirja/paastopaivakirja.mv.db
+/Paastopaivakirja/paastopaivakirja.trace.db
 /Paastopaivakirja/.mvn
 /Paastopaivakirja/mvnw
 /Paastopaivakirja/mvnw.cmd
